// Package buissines contains business logic for the bot domain
package buissines

import (
	"context"
	"fmt"
	"time"

	"github.com/rs/zerolog"

	"github.com/Conte777/NewsFlow/services/bot-service/internal/domain/bot/deps"
	"github.com/Conte777/NewsFlow/services/bot-service/internal/domain/bot/dto"
	"github.com/Conte777/NewsFlow/services/bot-service/internal/domain/bot/entities"
	boterrors "github.com/Conte777/NewsFlow/services/bot-service/internal/domain/bot/errors"
)

// UseCase contains business logic for bot operations
type UseCase struct {
	producer   deps.SubscriptionEventProducer
	repository deps.SubscriptionRepository
	sender     deps.TelegramSender
	logger     zerolog.Logger
}

// NewUseCase creates a new UseCase instance
// Note: sender is not passed here to break cyclic dependency
// Use SetSender after creating TelegramHandlers
func NewUseCase(producer deps.SubscriptionEventProducer, repository deps.SubscriptionRepository, logger zerolog.Logger) *UseCase {
	return &UseCase{
		producer:   producer,
		repository: repository,
		logger:     logger,
	}
}

// SetSender sets the TelegramSender after construction
// This is called by fx.Invoke to resolve cyclic dependency
func (uc *UseCase) SetSender(sender deps.TelegramSender) {
	uc.sender = sender
}

// HandleStart handles /start command
func (uc *UseCase) HandleStart(ctx context.Context, req *dto.StartCommandRequest) (*dto.CommandResponse, error) {
	uc.logger.Info().
		Int64("user_id", req.UserID).
		Str("username", req.Username).
		Msg("User started bot")

	message := `üëã <b>–î–æ–±—Ä–æ –ø–æ–∂–∞–ª–æ–≤–∞—Ç—å –≤ NewsFlow Bot!</b>

–Ø –ø–æ–º–æ–≥—É –≤–∞–º –ø–æ–ª—É—á–∞—Ç—å –Ω–æ–≤–æ—Å—Ç–∏ –∏–∑ –≤–∞—à–∏—Ö –ª—é–±–∏–º—ã—Ö Telegram-–∫–∞–Ω–∞–ª–æ–≤.

<b>–ö–∞–∫ –ø–æ–¥–ø–∏—Å–∞—Ç—å—Å—è/–æ—Ç–ø–∏—Å–∞—Ç—å—Å—è:</b>
–ü–µ—Ä–µ—à–ª–∏—Ç–µ –º–Ω–µ —Å–æ–æ–±—â–µ–Ω–∏–µ –∏–∑ –ø—É–±–ª–∏—á–Ω–æ–≥–æ –∫–∞–Ω–∞–ª–∞ ‚Äî —è –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –ø–æ–¥–ø–∏—à—É –≤–∞—Å –∏–ª–∏ –æ—Ç–ø–∏—à—É, –µ—Å–ª–∏ –≤—ã —É–∂–µ –ø–æ–¥–ø–∏—Å–∞–Ω—ã.

<b>–î–æ—Å—Ç—É–ø–Ω—ã–µ –∫–æ–º–∞–Ω–¥—ã:</b>
/list - —Å–ø–∏—Å–æ–∫ –≤–∞—à–∏—Ö –ø–æ–¥–ø–∏—Å–æ–∫
/help - –ø–æ–∫–∞–∑–∞—Ç—å —Å–ø—Ä–∞–≤–∫—É`

	return &dto.CommandResponse{Message: message}, nil
}

// HandleHelp handles /help command
func (uc *UseCase) HandleHelp(ctx context.Context) (*dto.CommandResponse, error) {
	message := `üìö <b>–°–ø—Ä–∞–≤–∫–∞:</b>

<b>–ü–æ–¥–ø–∏—Å–∫–∞ –Ω–∞ –∫–∞–Ω–∞–ª:</b>
–ü–µ—Ä–µ—à–ª–∏—Ç–µ –º–Ω–µ —Å–æ–æ–±—â–µ–Ω–∏–µ –∏–∑ –ø—É–±–ª–∏—á–Ω–æ–≥–æ –∫–∞–Ω–∞–ª–∞ ‚Äî —è –ø–æ–¥–ø–∏—à—É –≤–∞—Å –Ω–∞ –Ω–µ–≥–æ.

<b>–û—Ç–ø–∏—Å–∫–∞ –æ—Ç –∫–∞–Ω–∞–ª–∞:</b>
–ü–µ—Ä–µ—à–ª–∏—Ç–µ –º–Ω–µ —Å–æ–æ–±—â–µ–Ω–∏–µ –∏–∑ –∫–∞–Ω–∞–ª–∞, –Ω–∞ –∫–æ—Ç–æ—Ä—ã–π –≤—ã —É–∂–µ –ø–æ–¥–ø–∏—Å–∞–Ω—ã ‚Äî —è –æ—Ç–ø–∏—à—É –≤–∞—Å –æ—Ç –Ω–µ–≥–æ.

<b>–ö–æ–º–∞–Ω–¥—ã:</b>
/start - –Ω–∞—á–∞—Ç—å —Ä–∞–±–æ—Ç—É —Å –±–æ—Ç–æ–º
/list - –ø–æ–∫–∞–∑–∞—Ç—å —Å–ø–∏—Å–æ–∫ –≤–∞—à–∏—Ö –ø–æ–¥–ø–∏—Å–æ–∫
/help - –ø–æ–∫–∞–∑–∞—Ç—å —ç—Ç—É —Å–ø—Ä–∞–≤–∫—É`

	return &dto.CommandResponse{Message: message}, nil
}

// HandleToggleSubscription handles toggle subscription logic
// If user is subscribed - unsubscribe, if not - subscribe
func (uc *UseCase) HandleToggleSubscription(ctx context.Context, req *dto.ToggleSubscriptionRequest) (*dto.ToggleSubscriptionResponse, error) {
	uc.logger.Info().
		Int64("user_id", req.UserID).
		Str("channel_id", req.ChannelID).
		Msg("Processing toggle subscription request")

	// Check if already subscribed via gRPC
	isSubscribed, err := uc.repository.CheckSubscription(ctx, req.UserID, req.ChannelID)
	if err != nil {
		uc.logger.Error().Err(err).Msg("Failed to check subscription status")
		return nil, fmt.Errorf("failed to check subscription: %w", err)
	}

	if isSubscribed {
		// Unsubscribe
		if err := uc.producer.SendSubscriptionDeleted(ctx, req.UserID, req.ChannelID); err != nil {
			uc.logger.Error().Err(err).Msg("Failed to send unsubscription event")
			return nil, fmt.Errorf("failed to unsubscribe: %w", err)
		}
		return &dto.ToggleSubscriptionResponse{
			Message: fmt.Sprintf("‚úÖ –í—ã –æ—Ç–ø–∏—Å–∞–ª–∏—Å—å –æ—Ç –∫–∞–Ω–∞–ª–∞ %s", req.ChannelID),
			Action:  "unsubscribed",
		}, nil
	}

	// Subscribe
	subscription := &entities.Subscription{
		UserID:      req.UserID,
		ChannelID:   req.ChannelID,
		ChannelName: req.ChannelName,
		CreatedAt:   time.Now(),
	}
	if err := uc.producer.SendSubscriptionCreated(ctx, subscription); err != nil {
		uc.logger.Error().Err(err).Msg("Failed to send subscription event")
		return nil, fmt.Errorf("failed to subscribe: %w", err)
	}

	return &dto.ToggleSubscriptionResponse{
		Message: fmt.Sprintf("‚úÖ –í—ã –ø–æ–¥–ø–∏—Å–∞–ª–∏—Å—å –Ω–∞ –∫–∞–Ω–∞–ª %s", req.ChannelID),
		Action:  "subscribed",
	}, nil
}

// HandleListSubscriptions handles listing user subscriptions
func (uc *UseCase) HandleListSubscriptions(ctx context.Context, userID int64) (*dto.SubscriptionListResponse, error) {
	uc.logger.Info().
		Int64("user_id", userID).
		Msg("Listing user subscriptions")

	subs, err := uc.repository.GetUserSubscriptions(ctx, userID)
	if err != nil {
		uc.logger.Error().Err(err).Int64("user_id", userID).Msg("Failed to get subscriptions")
		return nil, err
	}

	items := make([]dto.SubscriptionItem, len(subs))
	for i, sub := range subs {
		items[i] = dto.SubscriptionItem{
			ChannelID:   sub.ChannelID,
			ChannelName: sub.ChannelName,
			CreatedAt:   sub.CreatedAt,
		}
	}

	return &dto.SubscriptionListResponse{Subscriptions: items}, nil
}

// SendNews sends news to user via Telegram
func (uc *UseCase) SendNews(ctx context.Context, news *entities.NewsMessage) error {
	if uc.sender == nil {
		uc.logger.Error().Msg("TelegramSender is not set")
		return boterrors.ErrMessageDeliveryFailed
	}

	uc.logger.Info().
		Str("news_id", news.ID).
		Int64("user_id", news.UserID).
		Str("channel_id", news.ChannelID).
		Msg("Sending news to user")

	// Format message
	message := fmt.Sprintf("üì∞ <b>%s</b>\n\n%s", news.ChannelName, news.Content)

	// Send with or without media
	if len(news.MediaURLs) > 0 {
		return uc.sender.SendMessageWithMedia(ctx, news.UserID, message, news.MediaURLs)
	}

	return uc.sender.SendMessage(ctx, news.UserID, message)
}
